--- a/otbr.yaml
+++ b/otbr.yaml
@@ -1,7 +1,7 @@
 package:
   name: otbr
   version: 0.3.0
-  epoch: 1
+  epoch: 2
   description: "OpenThread Border Router"
   copyright:
     - license: BSD-3-Clause
@@ -12,6 +12,7 @@ package:
       - jsoncpp
       - eudev
       - avahi
+      - dbus
   target-architecture:
     - aarch64
     - x86_64
@@ -78,5 +79,6 @@ pipeline:
       install -Dm755 otbr/otbr-agent.initd "${{targets.destdir}}"/etc/init.d/otbr-agent
       install -Dm644 otbr/otbr-agent.confd "${{targets.destdir}}"/etc/conf.d/otbr-agent
       install -Dm644 otbr/99-otbr.rules "${{targets.destdir}}"/etc/udev/rules.d/99-otbr.rules
+      install -Dm644 otbr/otbr.sysctl "${{targets.destdir}}"/etc/sysctl.d/otbr.conf
 
   - uses: strip
