feat(otbr): enable REST API for Home Assistant integration
Home Assistant's Thread integration requires the OTBR REST API to
configure Thread datasets and manage the border router.

Changes:
- Enable OTBR_REST=ON in cmake build
- Add REST API settings to confd (port 8081 by default)
- Bump epoch to trigger rebuild

--- a/otbr.yaml
+++ b/otbr.yaml
@@ -1,7 +1,7 @@
 package:
   name: otbr
   version: 0.3.0
-  epoch: 2
+  epoch: 3
   description: "OpenThread Border Router"
   copyright:
     - license: BSD-3-Clause
@@ -66,7 +66,7 @@ pipeline:
         -DBUILD_TESTING=OFF \
         -DOTBR_DBUS=OFF \
         -DOTBR_MDNS=avahi \
-        -DOTBR_REST=OFF \
+        -DOTBR_REST=ON \
         -DOTBR_WEB=OFF \
         -DOTBR_NAT64=ON \
         -DOTBR_BORDER_ROUTING=ON
