--- a/otbr.yaml
+++ b/otbr.yaml
@@ -63,6 +63,7 @@ pipeline:
         -DCMAKE_C_COMPILER_LAUNCHER=ccache \
         -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
         -DCMAKE_CXX_FLAGS="$CXXFLAGS -Wno-maybe-uninitialized" \
+        -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
         -DBUILD_TESTING=OFF \
         -DOTBR_DBUS=OFF \
         -DOTBR_MDNS=avahi \
